--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   fluttertoast: ^8.0.3
   shared_preferences: ^2.0.15
   hex: ^0.2.0
+  font_awesome_flutter: ^9.2.0
+  url_launcher: ^6.0.20
+  flutter_speed_dial: ^3.0.5
+  lottie: ^2.3.2
 
 
 
@@ -75,6 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
