--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,11 @@ dependencies:
   dio: ^4.0.0
   fluttertoast: ^8.0.3
   shared_preferences: ^2.0.15
-  hex: ^0.2.0
   font_awesome_flutter: ^9.2.0
   url_launcher: ^6.0.20
   flutter_speed_dial: ^3.0.5
   lottie: ^2.3.2
+  pull_to_refresh: ^2.0.0
 
 
 
